[tool.poetry]
name = "pynction"
version = "0.3.0"
description = "Functional based library to support monads and other functional programming concepts"
authors = ["niconunez96 <nicolas110996@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
types-setuptools = "57.4.10"

[tool.poetry.group.dev.dependencies]
black = "22.1.0"
flake8 = "5.0.4"
flake8-commas = "2.1.0"
flake8-comprehensions = "3.10.1"
flake8-debugger = "4.1.2"
flake8-isort = "4.2.0"
flake8-string-format = "0.3.0"
flake8-bandit = "4.1.1"
isort = "5.10.1"
mypy = "0.991"
pep8-naming = "0.13.3"

[tool.poetry.group.test.dependencies]
coverage = "6.3.2"
pytest = "7.0.1"

[tool.poetry.group.tooling.dependencies]
invoke-release = "4.6.0"
pdoc3 = "0.10.0"
pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
